@@ -2,5 +2,5 @@ DIST idm-console-framework-1.1.3.tar.bz2 719653 RMD160 cf071bd9a99020f44c8ebad62
 DIST idm-console-framework-1.1.5.tar.bz2 706718 RMD160 68b9b5ba61a4c446a92814b34188322ced150a00 SHA1 15f1d2af4cac986c6caad39f4ed02191169fcb42 SHA256 6d4d08955bab2bdbda624bca4c21486f310a4044cf5a8c47d0b3697ec99d9121
 EBUILD idm-console-framework-1.1.3-r1.ebuild 1642 RMD160 7da6edbc104fd5874bb8df9357f9bdb67ef08dad SHA1 5be2520fd123e037cc7cb9b55d9aa74bf870b1f9 SHA256 b04bc1e4e36ff034ef05c27aea6cef8ae5cda8ef9ba7f7641ab2daad0d7f9fd5
 EBUILD idm-console-framework-1.1.5.ebuild 1644 RMD160 b61e0356a50392d190d1c9352a97bbcf5e48275c SHA1 9cdbdf118c9426b1248e4a1e15083e82ab09d5f5 SHA256 967f3d0a33541ed4029dba61fa8a6531895cb5a8f1b1e233dcb202096486825f
-MISC ChangeLog 633 RMD160 ec49ecbe8abf712d210f0332806b1d20faeec34d SHA1 adae71e81a09b98b30320f3b7c013114000bb704 SHA256 a6375225fc82006570668aff742ec006d319d63afdfcdecb9443ecde82eeafb5
+MISC ChangeLog 735 RMD160 257786f96f5164dfa37fce4ec3e6e85d73ab0389 SHA1 21f9a863e3536faacfa02f0bb8a36cf5bd05d958 SHA256 8c4a42a7639c394d9c3ac876eeaa2ebd8e9d49943592694518ee8770a2fc4f29
 MISC metadata.xml 416 RMD160 5a60964fb0f508ad54e9a68a95d8effb9106744f SHA1 a5804f180ca14eeaaff312822be1770bc79892d4 SHA256 e403b237fa37574521bfcd478f52062de94ae3cb7c0f27bcb24d55b4b27b8c1b
