@@ -1,5 +1,5 @@
-AUX setup.py 713 RMD160 6ac5ec6b3214ac62c99d9f7b1661469900779ceb SHA1 f2c76ee5bc8a506b2024adefaf5ec88e65e1376d SHA256 0fcd02a858cba7583124303cff792630d10b9afb89b358197d31bd2596ca715e
-DIST python-krbV-1.0.13-10.fc12.src.rpm 325211 RMD160 50373bacda071850fb701d60fba42be84ca7a9d8 SHA1 e4c5eaef0b76e96e3206b237f80c57afb0c50598 SHA256 0880d0f450c63a1c052bff5ba15bd6c3ce11557fc962c69aec394b466da1bbef
-EBUILD python-krbV-1.0.13.ebuild 1008 RMD160 ed735cd29d6a1ae4cde29fd2dbae5f8d1d270a50 SHA1 227d55e133800fcbf48dac5188e114888e108545 SHA256 5dcf9ffc25a4343b4a96d218455e9a61d5c077f356f87cb027bf40a411db6fff
-MISC ChangeLog 291 RMD160 caf3fc50f65dcac396b892cbddff0ceba3e757ca SHA1 7cfdd74e6c8adfb701e47b0a51485daef24adebb SHA256 d98e8a57d90eb790e2ea7bf779d7517d27e2593131d70406c6f5feb079eba456
+AUX setup.py 714 RMD160 f6e915205165b79924cc8e6363143be34da3e913 SHA1 49cb3346de2d060caee367b2838bdc5dd838da2d SHA256 ca2f51dcca8f07ac730535ae7bb5bb98ff025d365707741b5482db9e2ac6e674
+DIST python-krbV-1.0.90.tar.bz2 239925 RMD160 6dc7800315a1497e8972d49acc10f4ad2b1abdb2 SHA1 9e4bfd9b3943782294a290fda1189b090525e754 SHA256 a585bb3acd4f2e30f27a1c0d59776b73b006e45acd2b13a0e3f227181056b657
+EBUILD python-krbV-1.0.90.ebuild 1119 RMD160 519d0ec31ad124b576f2fd7f8200feeb2689c228 SHA1 31d2d5e4947cee1b30f55a1019ec2c5f87a97eba SHA256 e39f73bfde0bac5a63a35c667c15b42f464e399521f19019bfb6135f74c11863
+MISC ChangeLog 396 RMD160 1a1aa5bc16e00bb682077cf08cf89d88f881a29b SHA1 715e30b7e387a34af18965aa88045d071a212989 SHA256 5218a575f0e98c4275a6316919b7f65fca817df5f113256ace8a801fde07bac9
 MISC metadata.xml 410 RMD160 ff8185a9b88d9c3e58e87b1d5d5a63acd26cd2e8 SHA1 be95b33f70afd084071f29f119eb322000439b35 SHA256 bca0e6ecbd9e1b29a0cdbc342bc253114461ca7031551b34d813c5ba26a19923
